plang/testing/logs/false-incorrect/186/program186.p.p
uCLb :- z (CKF) (qULkF R) fZmg4.


jk (vQX2J (O47) (nTA e1) a1) lImog (t) (z).
dB7l rQSpT (S).


twCXI.


bjeB YGPxy aZNi :- bJZoo; (e KSOx (i) (q Bg8), o; s VNd4m, usa9q, bVn1 (RWA) (mVYoQ (HryCF) nZXD (JKf)) GDLOm, v93 (zaoz IT); pjQLW).
al (NH).

qmlk (mimC) BPp (ar) (cfXY).
aD (d6El (t5 (H) I N) S) :- r.

yX3u O2 :- raN06.
rv sswAN eyN1m (OVcyZ) :- (eMs (Puv) (mD Z5J9u (Bd) CP) U, lFeY k0fc7 (M) (x6hw W QqFxc (lX (w (grZvk (rqw1N sL1S lZ) D7 (okKRC (DLx) (iHZ (dm n3Vt) (crM) IPx (g6 dMNnr)) (Q))) IRP) OfE6 XiVUw)) Kim; w; s (U) (a) k2Thj; dO T4 af (kbdTD (fZ N XNS6) f ORn2K (z4HR))); ((aI5 edG (PEIgh) (aSR (CD0) (Mjb) UAKfK ii5o) omAF)).


oqgiZ a txWF (n (nO6) zMG (b4S)) QgHx.
j B.

epW usTl fG (VZ5bd) :- ((gdz mVXSq Sux0)), xWWD (aA3B (n1EN u (q0 (O) (aY0Ql fZmJ7 hFV8I kU)) uLW) x8cD) NC4, bqC (l r9pXM (WyM)) Y9g; fI2 vhNR (o (uX tRM (ui8wM (WPO) (S6) (QM) (lF0rS (IuA8c) o (F) (zTop D4T))) PXT (Fl6Bd))) pM; r9ZT9 fq9oJ, (tNYAV (LX) DQBH AcJOG); z1R0y K.
r oJCEg (r) (T3) :- (tU JL (O7) (IwW) gVXj, hKc7A (j)); (ipJ3 (uMDZh pjY nO jS (yt qmi uYx (zTqpj (wkuL wb (E) Pn) aj2 v (AMwY)) (N2Sm))) (iqN (Yoa) zO4 (edtUB (KV) EjZW)) LV73e rZ7zu), rL (BH1) hQ, (cqSC QThE PpSfr), (ei); fwT, p0S se (OAAr) (hsM UYZ (UmpIE) (fG (SrL) sEx)) Abpqs.

sW4Wp YVr (bRCXc T (dk lLq M64UG t) z8).
xha6.
m (jo mCIP K) :- (oBVG), ((zzIBb BK3Nn (I) (Q))); s5 bZjfA, yq8F; qgZM6 DeIS o (L30e2), uPADL Z emyu (QJJoK), whCc y, ywGo (x5f) (L) (mR6LQ z).


rP Oad GM.

b (PNvP) (xNAlQ (WCP) jcXr (H0MW) k).
? bA9 QaaR X7 (t IB (Tz) (m5Y)).


